--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
+    "peer": "^1.0.2",
     "socket.io": "^4.7.2"
   }
 }
