--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
     "peer": "^1.0.2",
     "socket.io": "^4.7.2",
