--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -32,6 +33,7 @@
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
     "peer": "^1.0.2",
+    "razorpay": "^2.9.2",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
   }
